--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -77,8 +77,8 @@ stages:
   variables:
   - group: Release
   jobs:
-  - job: build
-    displayName: Build image
+  - job: build_deploy
+    displayName: Build image and deploy
     steps:
     - task: GoTool@0
       displayName: Prepare Go env
@@ -92,7 +92,6 @@ stages:
     - script: |
         g8 --version
         g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
-        cat $(projectDirectory)/Dockerfile
       displayName: Generate project from g8 template
       workingDirectory: $(sessionDirectory)
     - task: DockerInstaller@0
@@ -111,6 +110,7 @@ stages:
         echo $appInfo > $(projectDirectory)/appinfo.json
         sed -i 's/{?HTTP_LISTEN_PORT}/{?PORT}/g' $(projectDirectory)/be-api/config/api.conf
         sed -i 's/{?DB_PGSQL_URL}/{?DATABASE_URL}/g' $(projectDirectory)/be-api/config/conf.d/api_gvabe.conf
+        cat $(projectDirectory)/Dockerfile
       displayName: Init application info
     - task: Docker@2
       displayName: Build Docker image
@@ -118,6 +118,7 @@ stages:
         command: build
         buildContext: '$(projectDirectory)'
         repository: '$(APP_SHORTNAME)'
+        dockerFile: '$(projectDirectory)/Dockerfile'
         tags: latest
     - script: |
         cat $(projectDirectory)/Dockerfile
