AB#25: Use JWT as login-token

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -48,6 +48,19 @@ gvabe {
     user_pwd = ${?INIT_USER_PWD}
   }
 
+  ## Key configurations
+  keys {
+    ## path to RSA private key (PEM format)
+    # override this setting with env RSA_PRIVKEY_FILE
+    rsa_privkey_file = "./config/keys/gva_priv.pem"
+    rsa_privkey_file = ${?RSA_PRIVKEY_FILE}
+
+    ## pass phrase for RSA private key
+    rsa_privkey_passphrase = "gvas3cr3t"
+    # override this setting with env RSA_PRIVKEY_PASSPHRASE
+    rsa_privkey_passphrase = ${?RSA_PRIVKEY_PASSPHRASE}
+  }
+
   db {
     # Support db types: sqlite, pgsql
     # override this setting with env DB_TYPE
