new bo model: user

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -42,10 +42,14 @@ api {
 gvabe {
   ## Initializing data
   init {
-    ## Id/password of the user to be automatically created in the system.
-    # override these settings with env INIT_USER_ID/INIT_USER_PWD
+    ## Id/password and display name of the user to be automatically created in the system.
+    # override these settings with env INIT_USER_ID/INIT_USER_PWD/INIT_USER_NAME
+    user_id = "admin@local"
     user_id = ${?INIT_USER_ID}
+    user_pwd = "s3cr3t"
     user_pwd = ${?INIT_USER_PWD}
+    user_name = "Administrtor"
+    user_name = ${?INIT_USER_NAME}
   }
 
   ## Key configurations
