--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -42,14 +42,14 @@ api {
 gvabe {
   ## Initializing data
   init {
-    ## Id/password and display name of the user to be automatically created in the system.
-    # override these settings with env INIT_USER_ID/INIT_USER_PWD/INIT_USER_NAME
-    user_id = "admin@local"
-    user_id = ${?INIT_USER_ID}
-    user_pwd = "s3cr3t"
-    user_pwd = ${?INIT_USER_PWD}
-    user_name = "Administrtor"
-    user_name = ${?INIT_USER_NAME}
+    ## Id/password and display name of the admin user to be automatically created in the system.
+    # override these settings with env INIT_ADMIN_USER_ID/INIT_ADMIN_USER_PWD/INIT_ADMIN_USER_NAME
+    admin_user_id = "admin@local"
+    admin_user_id = ${?INIT_ADMIN_USER_ID}
+    admin_user_pwd = "s3cr3t"
+    admin_user_pwd = ${?INIT_ADMIN_USER_PWD}
+    admin_user_name = "Administrtor"
+    admin_user_name = ${?INIT_ADMIN_USER_NAME}
   }
 
   ## Key configurations
