AB#22: Integrate with Exter

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -52,6 +52,19 @@ gvabe {
     admin_user_name = ${?INIT_ADMIN_USER_NAME}
   }
 
+  ## Exter configuration
+  exter {
+    ## client app id registered with Exter
+    # override this setting with env EXTER_APP_ID
+    app_id = "gva_demo_local"
+    app_id = ${?EXTER_APP_ID}
+
+    ## Exter's base url (without training slash)
+    # override this setting with env EXTER_BASE_URL
+    base_url = "https://exteross.gpvcloud.com"
+    base_url = ${?EXTER_BASE_URL}
+  }
+
   ## Key configurations
   keys {
     ## path to RSA private key (PEM format)
