EP#23: feature create blog post

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -16,6 +16,11 @@ api {
         get = "systemInfo"
       }
 
+      "/api/myblog" {
+        get = "myBlog"
+        post = "createBlogPost"
+      }
+
       "/api/groups" {
         get = "groupList"
         post = "createGroup"
