EP#23: edit blog post

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -21,6 +21,12 @@ api {
         post = "createBlogPost"
       }
 
+      "/api/post/:id" {
+        get = "getBlogPost"
+        put = "updateBlogPost"
+        delete = "deleteBlogPost"
+      }
+
       "/api/groups" {
         get = "groupList"
         post = "createGroup"
