--- a/src/main/g8/fe-gui/package.json
+++ b/src/main/g8/fe-gui/package.json
@@ -38,7 +38,9 @@
     "@coreui/vue": "^3.1.2",
     "@coreui/vue-chartjs": "^1.0.5",
     "crypto-js": "^4.0.0",
+    "dompurify": "^2.2.0",
     "jsrsasign": "^9.1.9",
+    "marked": "^1.2.2",
     "vue": "~2.6.12",
     "vue-router": "~3.4.3",
     "vuex": "~3.5.1"
