style up MyBlog page

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -16,11 +16,13 @@ api {
         get = "systemInfo"
       }
 
+      "/api/myfeed" {
+        get = "myFeed"
+      }
       "/api/myblog" {
         get = "myBlog"
         post = "createBlogPost"
       }
-
       "/api/post/:id" {
         get = "getBlogPost"
         put = "updateBlogPost"
