--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -61,7 +61,7 @@ gvabe {
     admin_user_id = ${?INIT_ADMIN_USER_ID}
     admin_user_pwd = "s3cr3t"
     admin_user_pwd = ${?INIT_ADMIN_USER_PWD}
-    admin_user_name = "Administrtor"
+    admin_user_name = "Administrator"
     admin_user_name = ${?INIT_ADMIN_USER_NAME}
   }
 
