EP#23: feature - vote on posts

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -29,6 +29,11 @@ api {
         delete = "deleteBlogPost"
       }
 
+      "/api/vote/:postId" {
+        get = "getUserVoteForPost"
+        post = "voteForPost"
+      }
+
       "/api/groups" {
         get = "groupList"
         post = "createGroup"
