--- a/src/main/g8/fe-gui/package.json
+++ b/src/main/g8/fe-gui/package.json
@@ -42,6 +42,7 @@
     "jsrsasign": "^9.1.9",
     "marked": "^2.0.0",
     "vue": "~2.6.12",
+    "vue-i18n": "^8.24.1",
     "vue-router": "~3.4.3",
     "vuex": "~3.5.1"
   },
@@ -56,14 +57,15 @@
     "auto-changelog": "~2.2.0",
     "babel-eslint": "~10.1.0",
     "babel-jest": "~26.3.0",
-    "chromedriver": "^85.0.0",
+    "chromedriver": "^89.0.0",
     "core-js": "~3.6.5",
     "eslint": "~7.8.1",
     "eslint-plugin-vue": "~6.2.2",
     "node-sass": "~4.14.1",
     "npm-run-all": "~4.1.5",
     "sass-loader": "~10.0.2",
-    "vue-template-compiler": "~2.6.12"
+    "vue-template-compiler": "~2.6.12",
+    "yargs-parser": "^18.1.3"
   },
   "browserslist": [
     "> 1%",
