BE: migrate to built-in henge package to github.com/btnguyen2k/henge

--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -67,8 +67,10 @@ stages:
         workingDir: '$(projectDirectory)/fe-gui'
     - script: cd $(projectDirectory)/be-api && go build -o $(goBuiltAppName) -tags netgo -a
       displayName: 'BE: go build'
-    - script: cd $(projectDirectory)/be-api && go test -v --cover
-      displayName: 'BE: go test'
+    - script: cd $(projectDirectory)/be-api && go test -v -count 1 ./src/gvabe/bov2/user
+      displayName: 'BE: go test BO user'
+    - script: cd $(projectDirectory)/be-api && go test -v -count 1 ./src/gvabe/bov2/blog
+      displayName: 'BE: go test BO blog'
 
 - stage: deploy_heroku
   displayName: Build image and deploy to Heroku
