--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -102,14 +102,28 @@ gvabe {
     type = "sqlite"
     type = ${?DB_TYPE}
 
+    ## SQLite configurations (for non-production only)
+    # directory: directory to store SQLite data
+    # dbname: SQLite database name
     sqlite {
       directory = "./data/sqlite"
       dbname = "gvabe"
     }
 
+    ## MongoDB configurations
+    # db: name of MongoDB database to store data
+    mongodb {
+      # override these settings with env DB_MONGODB_DB and DB_MONGODB_URL
+      db = "test"
+      url = "mongodb://root:test@localhost:27017/admin?replicaSet=replicaset&w=majority&retryWrites=true"
+      db = ${?DB_MONGODB_DB}
+      url = ${?DB_MONGODB_URL}
+    }
+
+    ## PostgreSQL configurations
     pgsql {
-      # override this setting with env DB_PGSQL_URL (or DATABASE_URL)
-      url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=govueadmin"
+      # override this setting with env DB_PGSQL_URL
+      url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
       url = ${?DB_PGSQL_URL}
     }
   }
