update unit tests

--- a/src/main/g8/be-api/config/commons.conf
+++ b/src/main/g8/be-api/config/commons.conf
@@ -2,7 +2,7 @@
 
 # Application timezonee
 # override this settinng with env TIMEZONE
-timezone = "Asia/Ho_Chi_Minh"
+timezone = "UTC"
 timezone = ${?TIMEZONE}
 
 # Load all config files from "conf.d" directory
