--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -105,6 +105,7 @@ gvabe {
     ## SQLite configurations (for non-production only)
     # directory: directory to store SQLite data
     # dbname: SQLite database name
+    # note: use driver github.com/mattn/go-sqlite3
     sqlite {
       directory = "./data/sqlite"
       dbname = "gvabe"
@@ -121,6 +122,7 @@ gvabe {
     }
 
     ## PostgreSQL configurations
+    # note: use driver github.com/jackc/pgx/v4/stdlib
     pgsql {
       # override this setting with env DB_PGSQL_URL
       url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
