--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -67,9 +67,9 @@ stages:
         workingDir: '$(projectDirectory)/fe-gui'
     - script: cd $(projectDirectory)/be-api && go build -o $(goBuiltAppName) -tags netgo -a
       displayName: 'BE: go build'
-    - script: cd $(projectDirectory)/be-api && go test -v -count 1 ./src/gvabe/bov2/user
+    - script: cd $(projectDirectory)/be-api && go test -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user
       displayName: 'BE: go test BO user'
-    - script: cd $(projectDirectory)/be-api && go test -v -count 1 ./src/gvabe/bov2/blog
+    - script: cd $(projectDirectory)/be-api && go test -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/blog
       displayName: 'BE: go test BO blog'
 
 - stage: deploy_heroku
