--- a/src/main/g8/fe-gui/package.json
+++ b/src/main/g8/fe-gui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-vue-admin-template",
-  "version": "3.1.1",
+  "version": "3.1.4",
   "description": "Open Source Bootstrap Admin Template",
   "author": {
     "name": "CoreUI",
@@ -19,7 +19,7 @@
     "url": "git@github.com:coreui/coreui-free-vue-admin-template.git"
   },
   "homepage": "http://coreui.io",
-  "copyright": "Copyright 2020 creativeLabs Łukasz Holeczek",
+  "copyright": "Copyright 2021 creativeLabs Łukasz Holeczek",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -32,48 +32,47 @@
     "auto-changelog": "auto-changelog  --hide-credit --commit-limit false --package --backfill-limit 0 --starting-version 3.0.0-beta.0"
   },
   "dependencies": {
-    "@coreui/coreui": "^3.2.2",
-    "@coreui/icons": "^2.0.0-beta.5",
+    "@coreui/coreui": "^3.4.0",
+    "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/utils": "^1.3.1",
-    "@coreui/vue": "^3.1.2",
-    "@coreui/vue-chartjs": "^1.0.5",
+    "@coreui/vue": "^3.2.9",
+    "@coreui/vue-chartjs": "^1.0.6",
     "crypto-js": "^4.0.0",
-    "dompurify": "^2.2.0",
-    "jsrsasign": "^10.2.0",
-    "marked": "^2.0.0",
+    "dompurify": "^2.3.0",
+    "jsrsasign": "^10.3.0",
+    "marked": "^2.1.3",
     "vue": "~2.6.12",
-    "vue-i18n": "^8.24.1",
-    "vue-router": "~3.4.3",
-    "vuex": "~3.5.1"
+    "vue-i18n": "^8.24.5",
+    "vue-router": "^3.5.1",
+    "vuex": "~3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.11.6",
-    "@vue/cli-plugin-babel": "~4.5.4",
-    "@vue/cli-plugin-e2e-nightwatch": "~4.5.4",
-    "@vue/cli-plugin-eslint": "~4.5.4",
-    "@vue/cli-plugin-unit-jest": "~4.5.4",
-    "@vue/cli-service": "~4.5.4",
-    "@vue/test-utils": "~1.0.5",
-    "auto-changelog": "~2.2.0",
+    "@babel/core": "^7.13.10",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-e2e-nightwatch": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/test-utils": "^1.1.3",
+    "auto-changelog": "~2.2.1",
     "babel-eslint": "~10.1.0",
-    "babel-jest": "~26.3.0",
-    "chromedriver": "^89.0.0",
-    "core-js": "~3.6.5",
-    "eslint": "~7.8.1",
-    "eslint-plugin-vue": "~6.2.2",
-    "node-sass": "~4.14.1",
+    "babel-jest": "~26.6.3",
+    "chromedriver": "latest",
+    "core-js": "^3.9.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "npm-run-all": "~4.1.5",
-    "sass-loader": "~10.0.2",
-    "vue-template-compiler": "~2.6.12",
-    "yargs-parser": "^18.1.3"
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "vue-template-compiler": "~2.6.12"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 9"
+    "not ie < 11"
   ],
   "engines": {
-    "node": ">= 8.10.x",
-    "npm": ">= 5.6.0"
+    "node": ">= 12.x",
+    "npm": ">= 6.x"
   }
 }
