add AWS DynamoDB to bootstrap

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -97,7 +97,7 @@ gvabe {
   }
 
   db {
-    # Support db types: sqlite, pgsql
+    # Support db types: sqlite, pgsql, mongodb, dynamodb
     # override this setting with env DB_TYPE
     type = "sqlite"
     type = ${?DB_TYPE}
@@ -109,6 +109,16 @@ gvabe {
     sqlite {
       directory = "./data/sqlite"
       dbname = "gvabe"
+    }
+
+    ## AWS DynamoDB configurations
+    # AWS AccessKeyId and SecretAccessKey are provided via env.AWS_ACCESS_KEY_ID and env.AWS_SECRET_ACCESS_KEY
+    dynamodb {
+      # override these settings with env DB_DYNAMODB_REGION and DB_DYNAMODB_ENDPOINT
+      region = "ap-southeast-1"
+      endpoint = "http://localhost:8000"
+      region = ${?DB_DYNAMODB_REGION}
+      endpoint = ${?DB_DYNAMODB_ENDPOINT}
     }
 
     ## MongoDB configurations
