add Cosmosdb to bootstrap

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -110,6 +110,21 @@ gvabe {
       directory = "./data/sqlite"
       dbname = "gvabe"
     }
+    ## PostgreSQL configurations
+    # note: use driver github.com/jackc/pgx/v4/stdlib
+    pgsql {
+      # override this setting with env DB_PGSQL_URL
+      url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
+      url = ${?DB_PGSQL_URL}
+    }
+
+    ## Azure Cosmos DB configurations
+    # note: use driver github.com/btnguyen2k/gocosmos
+    cosmosdb {
+      # override these settings with env DB_COSMOSDB_URL
+      url = "AccountEndpoint=https://localhost:8081/;AccountKey=CosmosDb-account-key;Db=db-name"
+      url = ${?DB_COSMOSDB_URL}
+    }
 
     ## AWS DynamoDB configurations
     # AWS AccessKeyId and SecretAccessKey are provided via env.AWS_ACCESS_KEY_ID and env.AWS_SECRET_ACCESS_KEY
@@ -129,14 +144,6 @@ gvabe {
       url = "mongodb://root:test@localhost:27017/admin?replicaSet=replicaset&w=majority&retryWrites=true"
       db = ${?DB_MONGODB_DB}
       url = ${?DB_MONGODB_URL}
-    }
-
-    ## PostgreSQL configurations
-    # note: use driver github.com/jackc/pgx/v4/stdlib
-    pgsql {
-      # override this setting with env DB_PGSQL_URL
-      url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
-      url = ${?DB_PGSQL_URL}
     }
   }
 }
