minor text update

--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -97,7 +97,7 @@ gvabe {
   }
 
   db {
-    # Support db types: sqlite, pgsql, mongodb, dynamodb
+    # Support db types: sqlite, pgsql, cosmosdb, dynamodb, mongodb
     # override this setting with env DB_TYPE
     type = "sqlite"
     type = ${?DB_TYPE}
