--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  goVersion: '1.14'                     # second latest major.minor version
+  goVersion: '1.13'                     # second latest major.minor version
   GOBIN: '$(GOROOT)/bin'
   GO111MODULE: 'on'
   goBuiltAppName: 'main'
@@ -37,6 +37,7 @@ stages:
         version: '$(goVersion)'
     - task: Go@0
       inputs:
+        # minimum go-giter8 v0.5.1
         command: 'get'
         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
       displayName: Install go-giter8
@@ -72,9 +73,36 @@ stages:
     - script: cd $(projectDirectory)/be-api && go test -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/blog
       displayName: 'BE: go test BO blog'
 
+- stage: test
+  displayName: Run tests
+  dependsOn: build
+  jobs:
+  - job: test_aws_dynamodb
+    displayName: Run tests against AWS DynamoDB
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - script: |
+        docker run -d --rm --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
+        export AWS_REGION="us-west-2"
+        export AWS_ACCESS_KEY_ID="DUMMYIDEXAMPLE"
+        export AWS_SECRET_ACCESS_KEY="DUMMYEXAMPLEKEY"
+        export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
+        cd $(System.DefaultWorkingDirectory)/be-api \
+          && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
+          && bash <(curl -s https://codecov.io/bash) -cF dynamodb
+      displayName: 'BE: Run tests against AWS DynamoDB'    
+
 - stage: deploy_heroku
   displayName: Build image and deploy to Heroku
-  dependsOn: build
+  dependsOn: test
   condition: eq(variables['branchMasterChanged'], false)
   variables:
   - group: Release
