--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -68,10 +68,6 @@ stages:
         workingDir: '$(projectDirectory)/fe-gui'
     - script: cd $(projectDirectory)/be-api && go build -o $(goBuiltAppName) -tags netgo -a
       displayName: 'BE: go build'
-    - script: cd $(projectDirectory)/be-api && go test -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user
-      displayName: 'BE: go test BO user'
-    - script: cd $(projectDirectory)/be-api && go test -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/blog
-      displayName: 'BE: go test BO blog'
 
 - stage: test
   displayName: Run tests
@@ -95,7 +91,7 @@ stages:
         export AWS_ACCESS_KEY_ID="DUMMYIDEXAMPLE"
         export AWS_SECRET_ACCESS_KEY="DUMMYEXAMPLEKEY"
         export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
-        cd $(System.DefaultWorkingDirectory)/be-api \
+        cd $(projectDirectory)/be-api \
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
           && bash <(curl -s https://codecov.io/bash) -cF dynamodb
       displayName: 'BE: Run tests against AWS DynamoDB'    
