--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
         version: '$(goVersion)'
     - task: Go@0
       inputs:
-        # minimum go-giter8 v0.5.1
+        # minimum go-giter8 v0.5.1 for "quiet" mode
         command: 'get'
         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
       displayName: Install go-giter8
@@ -80,6 +80,15 @@ stages:
       displayName: Prepare Go env
       inputs:
         version: '$(goVersion)'
+    - task: Go@0
+      inputs:
+        # minimum go-giter8 v0.5.1 for "quiet" mode
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+      displayName: Install go-giter8
+    - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+      displayName: Generate project from g8 template
+      workingDirectory: $(sessionDirectory)
     - task: DockerInstaller@0
       displayName: Prepare Docker CLI
       inputs:
