--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -96,9 +96,10 @@ stages:
         releaseType: 'stable'
     - script: |
         docker run -d --rm --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
+        sleep 10
         export AWS_REGION="us-west-2"
-        export AWS_ACCESS_KEY_ID="DUMMYIDEXAMPLE"
-        export AWS_SECRET_ACCESS_KEY="DUMMYEXAMPLEKEY"
+        export AWS_ACCESS_KEY_ID="DUMMY"
+        export AWS_SECRET_ACCESS_KEY="DUMMY"
         export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
         cd $(projectDirectory)/be-api \
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
@@ -108,7 +109,7 @@ stages:
 - stage: deploy_heroku
   displayName: Build image and deploy to Heroku
   dependsOn: test
-  condition: eq(variables['branchMasterChanged'], false)
+  condition: and(succeeded(), eq(variables['branchMasterChanged'], false))
   variables:
   - group: Release
   jobs:
