--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -73,6 +73,36 @@ stages:
   displayName: Run tests
   dependsOn: build
   jobs:
+  - job: test_azure_cosmosdb
+    displayName: Run tests against Azure Cosmos DB
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - task: Go@0
+      inputs:
+        # minimum go-giter8 v0.5.1 for "quiet" mode
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+      displayName: Install go-giter8
+    - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+      displayName: Generate project from g8 template
+      workingDirectory: $(sessionDirectory)
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - script: |
+        docker run -d --rm --name cosmosdb -p 8081:8081 -p 10251:10251 -p 10252:10252 -p 10253:10253 -p 10254:10254 -e AZURE_COSMOS_EMULATOR_PARTITION_COUNT=4 -e AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE=false mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
+        sleep 30
+        export COSMOSDB_DRIVER="gocosmos"
+        export COSMOSDB_URL="AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva;InsecureSkipVerify=true"
+        cd $(projectDirectory)/be-api \
+          && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
+          && bash <(curl -s https://codecov.io/bash) -cF cosmosdb
+      displayName: 'BE: Run tests against AWS DynamoDB'    
   - job: test_aws_dynamodb
     displayName: Run tests against AWS DynamoDB
     steps:
@@ -96,7 +126,7 @@ stages:
         releaseType: 'stable'
     - script: |
         docker run -d --rm --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
-        sleep 10
+        sleep 5
         export AWS_REGION="us-west-2"
         export AWS_ACCESS_KEY_ID="DUMMY"
         export AWS_SECRET_ACCESS_KEY="DUMMY"
