--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -102,7 +102,7 @@ stages:
         cd $(projectDirectory)/be-api \
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
           && bash <(curl -s https://codecov.io/bash) -cF cosmosdb
-      displayName: 'BE: Run tests against AWS DynamoDB'    
+      displayName: 'BE: Run tests against Azure Cosmos DB'    
   - job: test_aws_dynamodb
     displayName: Run tests against AWS DynamoDB
     steps:
@@ -135,6 +135,66 @@ stages:
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
           && bash <(curl -s https://codecov.io/bash) -cF dynamodb
       displayName: 'BE: Run tests against AWS DynamoDB'    
+  - job: test_pgsql
+    displayName: Run tests against PostgreSQL
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - task: Go@0
+      inputs:
+        # minimum go-giter8 v0.5.1 for "quiet" mode
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+      displayName: Install go-giter8
+    - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+      displayName: Generate project from g8 template
+      workingDirectory: $(sessionDirectory)
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - script: |
+        docker run -d --rm --name postgres -e POSTGRES_DB=test -e POSTGRES_USER=test -e POSTGRES_PASSWORD=test -p 5432:5432 postgres:11
+        sleep 5
+        export PGSQL_DRIVER="pgx"
+        export PGSQL_URL="postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
+        cd $(projectDirectory)/be-api \
+          && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
+          && bash <(curl -s https://codecov.io/bash) -cF pgsql
+      displayName: 'BE: Run tests against PostgreSQL'    
+  - job: test_sqlite
+    displayName: Run tests against SQLite
+    steps:
+    - task: GoTool@0
+      displayName: Prepare Go env
+      inputs:
+        version: '$(goVersion)'
+    - task: Go@0
+      inputs:
+        # minimum go-giter8 v0.5.1 for "quiet" mode
+        command: 'get'
+        arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+      displayName: Install go-giter8
+    - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+      displayName: Generate project from g8 template
+      workingDirectory: $(sessionDirectory)
+    - task: DockerInstaller@0
+      displayName: Prepare Docker CLI
+      inputs:
+        dockerVersion: '$(dockerVersion)'
+        releaseType: 'stable'
+    - script: |
+        export PWD=$(pwd)
+        mkdir $PWD/temp
+        export SQLITE_DRIVER="sqlite3"
+        export SQLITE_URL="$PWD/temp/temp.db"
+        cd $(projectDirectory)/be-api \
+          && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
+          && bash <(curl -s https://codecov.io/bash) -cF sqlite
+      displayName: 'BE: Run tests against SQLite'    
 
 - stage: deploy_heroku
   displayName: Build image and deploy to Heroku
