--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -73,8 +73,42 @@ stages:
   displayName: Run tests
   dependsOn: build
   jobs:
+  # - job: test_azure_cosmosdb
+  #   displayName: Run tests against Azure Cosmos DB
+  #   steps:
+  #   - task: GoTool@0
+  #     displayName: Prepare Go env
+  #     inputs:
+  #       version: '$(goVersion)'
+  #   - task: Go@0
+  #     inputs:
+  #       # minimum go-giter8 v0.5.1 for "quiet" mode
+  #       command: 'get'
+  #       arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
+  #     displayName: Install go-giter8
+  #   - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+  #     displayName: Generate project from g8 template
+  #     workingDirectory: $(sessionDirectory)
+  #   - task: DockerInstaller@0
+  #     displayName: Prepare Docker CLI
+  #     inputs:
+  #       dockerVersion: '$(dockerVersion)'
+  #       releaseType: 'stable'
+  #   - script: |
+  #       docker run -d --rm --name cosmosdb -p 8081:8081 -p 10251:10251 -p 10252:10252 -p 10253:10253 -p 10254:10254 -e AZURE_COSMOS_EMULATOR_PARTITION_COUNT=4 -e AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE=false mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
+  #       sleep 60
+  #       export CODECOV_TOKEN=$(CODECOV_TOKEN)
+  #       export COSMOSDB_DRIVER="gocosmos"
+  #       export COSMOSDB_URL="AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva;InsecureSkipVerify=true"
+  #       cd $(projectDirectory)/be-api \
+  #         && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
+  #         && bash <(curl -s https://codecov.io/bash) -cF cosmosdb
+  #     displayName: 'BE: Run tests against Azure Cosmos DB'
   - job: test_azure_cosmosdb
     displayName: Run tests against Azure Cosmos DB
+    pool:
+      #vmImage: 'vs2017-win2016'
+      vmImage: 'windows-latest'
     steps:
     - task: GoTool@0
       displayName: Prepare Go env
@@ -89,20 +123,27 @@ stages:
     - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
       displayName: Generate project from g8 template
       workingDirectory: $(sessionDirectory)
-    - task: DockerInstaller@0
-      displayName: Prepare Docker CLI
-      inputs:
-        dockerVersion: '$(dockerVersion)'
-        releaseType: 'stable'
     - script: |
-        docker run -d --rm --name cosmosdb -p 8081:8081 -p 10251:10251 -p 10252:10252 -p 10253:10253 -p 10254:10254 -e AZURE_COSMOS_EMULATOR_PARTITION_COUNT=4 -e AZURE_COSMOS_EMULATOR_ENABLE_DATA_PERSISTENCE=false mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator
-        sleep 60
-        export COSMOSDB_DRIVER="gocosmos"
-        export COSMOSDB_URL="AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva;InsecureSkipVerify=true"
-        cd $(projectDirectory)/be-api \
-          && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
-          && bash <(curl -s https://codecov.io/bash) -cF cosmosdb
-      displayName: 'BE: Run tests against Azure Cosmos DB'    
+        echo "Assumming running in cmd.exe"
+        echo "Azure CosmosDb Emulator shoud have been installed at C:\Program Files\Azure Cosmos DB Emulator\"
+        echo choco install -y azure-cosmosdb-emulator
+        powershell "& \"C:\Program Files\Azure Cosmos DB Emulator\Microsoft.Azure.Cosmos.Emulator.exe\""
+        powershell -command start-Sleep -s 120
+        powershell try { Invoke-RestMethod -Method GET https://127.0.0.1:8081/ } catch {}
+        powershell netstat -nt
+        echo $env:COSMOSDB_DRIVER='gocosmos'
+        echo $env:COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva'
+        echo $env:TIMEZONE='Asia/Ho_Chi_Minh'
+        echo $env:CODECOV_TOKEN='$(CODECOV_TOKEN)'
+        set COSMOSDB_DRIVER='gocosmos'
+        set COSMOSDB_URL='AccountEndpoint=https://localhost:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=gva'
+        set TIMEZONE='Asia/Ho_Chi_Minh'
+        set CODECOV_TOKEN='$(CODECOV_TOKEN)'
+        cd $(projectDirectory)/be-api
+        go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog
+        choco install codecov
+        codecov -cF cosmosdb
+      displayName: 'BE: Run tests against Azure Cosmos DB'
   - job: test_aws_dynamodb
     displayName: Run tests against AWS DynamoDB
     steps:
@@ -127,6 +168,7 @@ stages:
     - script: |
         docker run -d --rm --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
         sleep 5
+        export CODECOV_TOKEN=$(CODECOV_TOKEN)
         export AWS_REGION="us-west-2"
         export AWS_ACCESS_KEY_ID="DUMMY"
         export AWS_SECRET_ACCESS_KEY="DUMMY"
@@ -134,7 +176,7 @@ stages:
         cd $(projectDirectory)/be-api \
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
           && bash <(curl -s https://codecov.io/bash) -cF dynamodb
-      displayName: 'BE: Run tests against AWS DynamoDB'    
+      displayName: 'BE: Run tests against AWS DynamoDB'
   - job: test_pgsql
     displayName: Run tests against PostgreSQL
     steps:
@@ -159,12 +201,13 @@ stages:
     - script: |
         docker run -d --rm --name postgres -e POSTGRES_DB=test -e POSTGRES_USER=test -e POSTGRES_PASSWORD=test -p 5432:5432 postgres:11
         sleep 5
+        export CODECOV_TOKEN=$(CODECOV_TOKEN)
         export PGSQL_DRIVER="pgx"
         export PGSQL_URL="postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
         cd $(projectDirectory)/be-api \
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
           && bash <(curl -s https://codecov.io/bash) -cF pgsql
-      displayName: 'BE: Run tests against PostgreSQL'    
+      displayName: 'BE: Run tests against PostgreSQL'
   - job: test_sqlite
     displayName: Run tests against SQLite
     steps:
@@ -187,6 +230,7 @@ stages:
         dockerVersion: '$(dockerVersion)'
         releaseType: 'stable'
     - script: |
+        export CODECOV_TOKEN=$(CODECOV_TOKEN)
         export PWD=$(pwd)
         mkdir $PWD/temp
         export SQLITE_DRIVER="sqlite3"
@@ -194,7 +238,7 @@ stages:
         cd $(projectDirectory)/be-api \
           && go test -p 1 -v -cover -coverprofile=coverage.txt -count 1 ./src/gvabe/bov2/user ./src/gvabe/bov2/blog \
           && bash <(curl -s https://codecov.io/bash) -cF sqlite
-      displayName: 'BE: Run tests against SQLite'    
+      displayName: 'BE: Run tests against SQLite'
 
 - stage: deploy_heroku
   displayName: Build image and deploy to Heroku
