--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -120,7 +120,7 @@ stages:
         command: 'get'
         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
       displayName: Install go-giter8
-    - script: g8 new --no-inputs file://$(System.DefaultWorkingDirectory)
+    - script: g8 new --no-inputs file:///$(System.DefaultWorkingDirectory)
       displayName: Generate project from g8 template
       workingDirectory: $(sessionDirectory)
     - script: |
