--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -120,12 +120,15 @@ stages:
         command: 'get'
         arguments: 'github.com/btnguyen2k/go-giter8/g8@v0.5.1'
       displayName: Install go-giter8
-    - script: g8 new --no-inputs file:///$(System.DefaultWorkingDirectory)
+    - script: |
+        echo "Normalizing directory path"
+        set d=file://$(System.DefaultWorkingDirectory)
+        set d=%d:\=/%
+        g8 new --no-inputs --verbose %d%
       displayName: Generate project from g8 template
       workingDirectory: $(sessionDirectory)
     - script: |
-        echo "Assumming running in cmd.exe"
-        echo "Azure CosmosDb Emulator shoud have been installed at C:\Program Files\Azure Cosmos DB Emulator\"
+        echo "Azure CosmosDb Emulator will be installed to C:\Program Files\Azure Cosmos DB Emulator\"
         echo choco install -y azure-cosmosdb-emulator
         powershell "& \"C:\Program Files\Azure Cosmos DB Emulator\Microsoft.Azure.Cosmos.Emulator.exe\""
         powershell -command start-Sleep -s 120
