--- a/src/main/g8/fe-gui/Dockerfile
+++ b/src/main/g8/fe-gui/Dockerfile
@@ -2,11 +2,13 @@
 # Sample build command:
 # docker build --force-rm --squash -t $shortname$_fe:$version$ .
 
-FROM node:13.6-alpine3.11 AS builder
+#FROM node:13.6-alpine3.11 AS builder
+#FROM node:12.22-alpine3.15 AS builder
+FROM node:12-alpine AS builder
 MAINTAINER $author$
 RUN mkdir /build
 COPY . /build
-RUN cd /build && rm -rf dist node_modules && npm install && npm run build
+RUN cd /build && rm -rf .env dist node_modules package-lock.json && npm install && npm run build
 
 FROM nginx:1.17-alpine
 COPY nginx.conf /etc/nginx/nginx.conf
