--- a/src/main/g8/fe-gui/package.json
+++ b/src/main/g8/fe-gui/package.json
@@ -1,78 +1,65 @@
 {
   "name": "@coreui/coreui-free-vue-admin-template",
-  "version": "3.1.4",
-  "description": "Open Source Bootstrap Admin Template",
-  "author": {
-    "name": "CoreUI",
-    "url": "https://coreui.io",
-    "github": "https://github.com/coreui",
-    "twitter": "https://twitter.com/core_ui"
+  "version": "4.1.0",
+  "description": "CoreUI Free Vue Admin Template",
+  "bugs": {
+    "url": "https://github.com/coreui/coreui-free-vue-admin-template/issues"
   },
-  "contributors": [
-    {
-      "name": "CoreUI Team",
-      "url": "https://github.com/orgs/coreui/people"
-    }
-  ],
   "repository": {
     "type": "git",
     "url": "git@github.com:coreui/coreui-free-vue-admin-template.git"
   },
-  "homepage": "http://coreui.io",
-  "copyright": "Copyright 2021 creativeLabs Łukasz Holeczek",
   "license": "MIT",
+  "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
-    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
+    "serve": "vue-cli-service serve",
     "test:e2e": "vue-cli-service test:e2e",
-    "clearCache": "jest --clearCache",
-    "release": "npm-run-all clearCache lint build test:unit test:e2e",
-    "auto-changelog": "auto-changelog  --hide-credit --commit-limit false --package --backfill-limit 0 --starting-version 3.0.0-beta.0"
+    "test:unit": "vue-cli-service test:unit"
+  },
+  "config": {
+    "coreui_library_short_version": "4.1"
   },
   "dependencies": {
-    "@coreui/coreui": "^3.4.0",
-    "@coreui/icons": "^2.0.0-rc.0",
+    "@coreui/chartjs": "^3.0.0",
+    "@coreui/coreui": "^4.1.0",
+    "@coreui/icons": "^2.1.0",
+    "@coreui/icons-vue": "2.0.0",
     "@coreui/utils": "^1.3.1",
-    "@coreui/vue": "^3.2.9",
-    "@coreui/vue-chartjs": "^1.0.6",
+    "@coreui/vue": "^4.1.0",
+    "@coreui/vue-chartjs": "2.0.0",
+    "axios": "^0.27.2",
+    "core-js": "^3.19.0",
     "crypto-js": "^4.0.0",
     "dompurify": "^2.3.0",
     "jsrsasign": "^10.3.0",
     "marked": "^2.1.3",
-    "vue": "~2.6.12",
+    "vue": "^3.2.23",
     "vue-i18n": "^8.24.5",
-    "vue-router": "^3.5.1",
-    "vuex": "~3.6.2"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@vue/cli-plugin-babel": "^4.5.11",
-    "@vue/cli-plugin-e2e-nightwatch": "^4.5.11",
-    "@vue/cli-plugin-eslint": "^4.5.11",
-    "@vue/cli-plugin-unit-jest": "^4.5.11",
-    "@vue/cli-service": "^4.5.11",
-    "@vue/test-utils": "^1.1.3",
-    "auto-changelog": "~2.2.1",
-    "babel-eslint": "~10.1.0",
-    "babel-jest": "~26.6.3",
-    "chromedriver": "latest",
-    "core-js": "^3.9.1",
-    "eslint": "^6.8.0",
-    "eslint-plugin-vue": "^6.2.2",
-    "npm-run-all": "~4.1.5",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
-    "vue-template-compiler": "~2.6.12"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie < 11"
-  ],
-  "engines": {
-    "node": ">= 12.x",
-    "npm": ">= 6.x"
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0-rc.1",
+    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
+    "@vue/cli-plugin-router": "~5.0.0-rc.1",
+    "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
+    "@vue/cli-plugin-vuex": "~5.0.0-rc.1",
+    "@vue/cli-service": "~5.0.0-rc.1",
+    "@vue/test-utils": "^2.0.0-0",
+    "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "babel-jest": "^27.0.6",
+    "cypress": "^8.7.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.0.5",
+    "prettier": "^2.4.1",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0"
   }
 }
