--- a/src/main/g8/fe-gui/src/config.json
+++ b/src/main/g8/fe-gui/src/config.json
@@ -1,5 +1,5 @@
 {
-  "_": "#GovueAdmin-Customized",
+  "_": "#GoVueAdmin-Customized",
   "app": {
     "name": "#{appName}",
     "initial": "#{appInitial}",
