API client send 'language' header to server

--- a/src/main/g8/fe-gui/src/config.json
+++ b/src/main/g8/fe-gui/src/config.json
@@ -11,6 +11,7 @@
     "bo_api_base_url": "",
     "app_id": "#{appShortname}_fe",
     "header_app_id": "X-App-Id",
-    "header_access_token": "X-Access-Token"
+    "header_access_token": "X-Access-Token",
+    "header_language": "X-Language"
   }
 }
