--- a/src/main/g8/be-api/config/conf.d/api_gvabe.conf
+++ b/src/main/g8/be-api/config/conf.d/api_gvabe.conf
@@ -1,6 +1,6 @@
 api {
   http {
-    # API HTTP endpoints
+    ## API configurations - HTTP endpoints
     endpoints {
       # format: {url={http-method=handler-name}}
       "/info" {
@@ -53,97 +53,6 @@ api {
         put = "updateUser"
         delete = "deleteUser"
       }
-    }
-  }
-}
-
-gvabe {
-  ## Initializing data
-  init {
-    ## Id/password and display name of the admin user to be automatically created in the system.
-    # override these settings with env INIT_ADMIN_USER_ID/INIT_ADMIN_USER_PWD/INIT_ADMIN_USER_NAME
-    admin_user_id = "admin@local"
-    admin_user_id = ${?INIT_ADMIN_USER_ID}
-    admin_user_pwd = "s3cr3t"
-    admin_user_pwd = ${?INIT_ADMIN_USER_PWD}
-    admin_user_name = "Administrator"
-    admin_user_name = ${?INIT_ADMIN_USER_NAME}
-  }
-
-  ## Exter configuration
-  exter {
-    ## client app id registered with Exter
-    # override this setting with env EXTER_APP_ID
-    app_id = "gva_demo_local"
-    app_id = ${?EXTER_APP_ID}
-
-    ## Exter's base url (without training slash)
-    # override this setting with env EXTER_BASE_URL
-    base_url = "https://exteross.gpvcloud.com"
-    base_url = ${?EXTER_BASE_URL}
-  }
-
-  ## Key configurations
-  keys {
-    ## path to RSA private key (PEM format)
-    # override this setting with env RSA_PRIVKEY_FILE
-    rsa_privkey_file = "./config/keys/gva_priv.pem"
-    rsa_privkey_file = ${?RSA_PRIVKEY_FILE}
-
-    ## pass phrase for RSA private key
-    rsa_privkey_passphrase = "gvas3cr3t"
-    # override this setting with env RSA_PRIVKEY_PASSPHRASE
-    rsa_privkey_passphrase = ${?RSA_PRIVKEY_PASSPHRASE}
-  }
-
-  db {
-    # Support db types: sqlite, pgsql, cosmosdb, dynamodb, mongodb
-    # override this setting with env DB_TYPE
-    type = "sqlite"
-    type = ${?DB_TYPE}
-
-    ## SQLite configurations (for non-production only)
-    # directory: directory to store SQLite data
-    # dbname: SQLite database name
-    # note: use driver github.com/mattn/go-sqlite3
-    sqlite {
-      directory = "./data/sqlite"
-      dbname = "gvabe"
-    }
-    ## PostgreSQL configurations
-    # note: use driver github.com/jackc/pgx/v4/stdlib
-    pgsql {
-      # override this setting with env DB_PGSQL_URL
-      url = "postgres://test:test@localhost:5432/test?sslmode=disable&client_encoding=UTF-8&application_name=gva"
-      url = ${?DB_PGSQL_URL}
-    }
-
-    ## Azure Cosmos DB configurations
-    # note: use driver github.com/btnguyen2k/gocosmos
-    cosmosdb {
-      # override these settings with env DB_COSMOSDB_URL
-      url = "AccountEndpoint=https://localhost:8081/;AccountKey=CosmosDb-account-key;Db=db-name"
-      url = ${?DB_COSMOSDB_URL}
-    }
-
-    ## AWS DynamoDB configurations
-    # AWS AccessKeyId and SecretAccessKey are provided via env.AWS_ACCESS_KEY_ID and env.AWS_SECRET_ACCESS_KEY
-    dynamodb {
-      # override these settings with env DB_DYNAMODB_REGION and DB_DYNAMODB_ENDPOINT
-      region = "ap-southeast-1"
-      endpoint = "http://localhost:8000"
-      region = ${?DB_DYNAMODB_REGION}
-      endpoint = ${?DB_DYNAMODB_ENDPOINT}
-    }
-
-    ## MongoDB configurations
-    # db: name of MongoDB database to store data
-    mongodb {
-      # override these settings with env DB_MONGODB_DB and DB_MONGODB_URL
-      db = "test"
-      url = "mongodb://root:test@localhost:27017/admin?replicaSet=replicaset&w=majority&retryWrites=true"
-      db = ${?DB_MONGODB_DB}
-      url = ${?DB_MONGODB_URL}
     }
   }
 }
