--- a/.azure/azure-pipelines.yml
+++ b/.azure/azure-pipelines.yml
@@ -11,12 +11,12 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  goVersion: '1.13'                     # second latest major.minor version
+  goVersion: '1.17'
   GOBIN: '$(GOROOT)/bin'
   GO111MODULE: 'on'
   goBuiltAppName: 'main'
-  nodejsVersion: '12.x'                 # latest LTS version
-  dockerVersion: '19.03.12'             # latest major.minor version
+  nodejsVersion: '12.x'
+  dockerVersion: '19.03.12'
   herokuRegistry: 'registry.heroku.com'
   herokuApp: 'demo-govueadmin'
   branchMasterChanged: ${{ eq(variables['Build.SourceBranch'], 'refs/heads/master') }}
