--- a/.github/workflows/govueadmin.yaml
+++ b/.github/workflows/govueadmin.yaml
@@ -11,6 +11,33 @@ env:
   BE_GO_TEST_PATH: './src/gvabe/bov2/user ./src/gvabe/bov2/blog'
 
 jobs:
+  testWithDynamoDb:
+    name: Test with AWS DynamoDB
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Go env
+      uses: actions/setup-go@v2
+      with:
+        go-version: "1.17"
+    - name: Check out code
+      uses: actions/checkout@v2
+    - name: Start AWS DynamoDB server
+      run: docker run -d --name dynamodb -p 8000:8000 amazon/dynamodb-local -jar DynamoDBLocal.jar -inMemory -sharedDb
+    - name: Test
+      run: |
+        export TIMEZONE="Asia/Ho_Chi_Minh"
+        export AWS_REGION="us-west-2"
+        export AWS_ACCESS_KEY_ID="DUMMY"
+        export AWS_SECRET_ACCESS_KEY="DUMMY"
+        export AWS_DYNAMODB_ENDPOINT="http://localhost:8000"
+        cd $BE_ROOT
+        go test -v -count 1 -p 1 -cover -coverprofile=coverage_dynamodb.txt $BE_GO_TEST_PATH
+    - name: Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        flags: dynamodb
+        name: dynamodb
+
   testWithMongoStandalone:
     name: Test with MongoDB (Standalone)
     runs-on: ubuntu-latest
@@ -33,8 +60,8 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v3
       with:
-        flags: myapp_mongo_standalone
-        name: myapp_mongo_standalone
+        flags: mongo_standalone
+        name: mongo_standalone
 
   testWithMongoReplicaSet:
     name: Test with MongoDB (ReplicaSet)
@@ -58,8 +85,8 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v3
       with:
-        flags: myapp_mongo_replicaset
-        name: myapp_mongo_replicaset
+        flags: mongo_replicaset
+        name: mongo_replicaset
 
   # testWithMySQL:
   #   name: Test with MySQL
