--- a/.github/workflows/govueadmin.yaml
+++ b/.github/workflows/govueadmin.yaml
@@ -145,30 +145,29 @@ jobs:
         flags: pgsql
         name: pgsql
 
-  # testWithSqlite:
-  #   name: Test with SQLite
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: Set up Go env
-  #     uses: actions/setup-go@v2
-  #     with:
-  #       go-version: "1.17"
-  #   - name: Check out code
-  #     uses: actions/checkout@v2
-  #   - name: Test
-  #     run: |
-  #       export TIMEZONE="Asia/Ho_Chi_Minh"
-  #       cd ./src/main/g8
-  #       mkdir -p ./temp
-  #       export SQLITE_DRIVER="sqlite3"
-  #       export SQLITE_URL="$(pwd)/temp/temp.db"
-  #       ls -l
-  #       go test -v -count 1 -p 1 -cover -coverprofile=coverage_sqlite.txt ./src/myapp/
-  #   - name: Codecov
-  #     uses: codecov/codecov-action@v3
-  #     with:
-  #       flags: myapp_sqlite
-  #       name: myapp_sqlite
+  testWithSqlite:
+    name: Test with SQLite
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Go env
+      uses: actions/setup-go@v2
+      with:
+        go-version: "1.17"
+    - name: Check out code
+      uses: actions/checkout@v2
+    - name: Test
+      run: |
+        export TIMEZONE="Asia/Ho_Chi_Minh"
+        cd $BE_ROOT
+        mkdir -p ./temp
+        export SQLITE_DRIVER="sqlite3"
+        export SQLITE_URL="$(pwd)/temp/temp.db"
+        go test -v -count 1 -p 1 -cover -coverprofile=coverage_sqlite.txt $BE_GO_TEST_PATH
+    - name: Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        flags: sqlite
+        name: sqlite
 
   # testG8AndDockerBuild:
   #   name: Test with go-giter8 and Docker build
