--- a/.github/workflows/govueadmin.yaml
+++ b/.github/workflows/govueadmin.yaml
@@ -190,7 +190,7 @@ jobs:
         $env:COSMOSDB_URL='AccountEndpoint=https://127.0.0.1:8081/;AccountKey=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==;Db=godal'
         $env:TIMEZONE='Asia/Ho_Chi_Minh'
         cd $env:BE_ROOT
-        go test -v -count 1 -p 1 -cover -coverprofile="coverage_cosmosdb_sql.txt" "$env:BE_GO_TEST_PATH"
+        go test -v -count 1 -p 1 -cover -coverprofile="coverage_cosmosdb_sql.txt" ./src/gvabe/bov2/user ./src/gvabe/bov2/blog
     - name: Codecov
       uses: codecov/codecov-action@v3
       with:
