--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,7 +3,7 @@ description  = This template generates an application with Vuejs-based frontend 
 verbatim     = .DS_Store .gitignore .gitlab-ci.yml go.mod go.sum release.sh gin-bin favicon.* be-api/vendor/* be-api/.g8/* fe-gui/public/*.png fe-gui/public/img/* fe-gui/dist/* fe-gui/node_modules/* 
 
 ## Note: it is recommended that name follows the format [a-zA-Z0-9]+ (only numbers and character), use camelCase to separate words (not underscores!)
-name         = govueadmin-seed
+name         = govueadmincp-seed
 shortname    = govueadmin
 initial      = GVE
 desc         = A application with Vuejs-based frontend and Go-based backend using Echo framework
